add multi color for lstlisting

--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -197,7 +197,7 @@ arp -d remote-host
         ip addr x.x.x.x 255.255.255.0
         no shut
         ip proxy-arp
-        Ctrl-Z
+        Ctrl+Z
 wr
         \end{lstlisting}
     \end{enumerate}
